Ajuste por deposito y retiro en cuentas
